--- a/03_web/02_bootstrap/04_display_position.html
+++ b/03_web/02_bootstrap/04_display_position.html
@@ -36,7 +36,7 @@
 
   <!-- 반응형 맛보기 -->
   <div class="m-2 bg-danger d-sm-none d-md-block">보이나? 안보이나?</div>
-  <div class="m-2 bg-danger d-md-none d-xl-block">보이나? 안보이나?</div>
+  <div class="m-2 bg-warning d-md-none d-xl-block">보이나? 안보이나?</div>
 
   <!-- position fixed -->
   <div class="sticky fixed-top bg dark"></div>
