--- a/03_web/02_bootstrap/workshop_11.html
+++ b/03_web/02_bootstrap/workshop_11.html
@@ -13,11 +13,11 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a class="navbar-brand text-white h1" href="#">Navbar</a>
-    <a class="navbar-brand text-white h2" href="#">Home</a>
-    <a class="navbar-brand text-secondary h2" href="#">Git</a>
-    <a class="navbar-brand text-muted h2" href="#">Python</a>
+    <a class="navbar-brand text-white h3" href="#">Home</a>
+    <a class="navbar-brand text-secondary h3" href="#">Git</a>
+    <a class="navbar-brand text-muted h3" href="#">Python</a>
   </nav>
-
+  <br>
   <div class="container">
     <form>
       <div class="form-group">
@@ -39,33 +39,31 @@
     <br>
     <div class="card-group">
       <div class="card">
-        <img src="images/sea.JPG" class="card-img-top" alt="#">
+        <img src="images/sea.JPG" class="card-img-top rounded mx-auto d-block" style="width: 90%" alt="#">
         <div class="card-body">
           <h5 class="card-title">바다</h5>
           <p class="card-text">바다는 파란색이다.</p>
-          <button type="submit" class="btn btn-primary">Go somewhere</button>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
       <div class="card">
-        <img src="images/sea.JPG" class="card-img-top" alt="#">
+        <img src="images/sea.JPG" class="card-img-top rounded mx-auto d-block" style="width: 90%" alt="#">
         <div class="card-body">
           <h5 class="card-title">바다</h5>
           <p class="card-text">바다는 파란색이다.</p>
-          <button type="submit" class="btn btn-primary">Go somewhere</button>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
       <div class="card">
-        <img src="images/sea.JPG" class="card-img-top" alt="#">
+        <img src="images/sea.JPG" class="card-img-top rounded mx-auto d-block" style="width: 90%" alt="#">
         <div class="card-body">
           <h5 class="card-title">바다</h5>
           <p class="card-text">바다는 파란색이다.</p>
-          <button type="submit" class="btn btn-primary">Go somewhere</button>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
   </div>
-
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
