--- a/03_web/02_bootstrap/03_border.html
+++ b/03_web/02_bootstrap/03_border.html
@@ -34,8 +34,8 @@
   <span class="border-left">left</span>
 
 
-  <img src="images/logo.png" alt="#" , class="rounded">
-  <img src="images/logo.png" alt="#" , class="rounded-">
+  <img src="images/logo.png" alt="#" , class="border border-dark rounded-circle">
+  <img src="images/logo.png" alt="#" , class="border border-dark rounded-pill">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
