190811 | modify web_README

--- a/03_web/02_bootstrap/04_display_position.html
+++ b/03_web/02_bootstrap/04_display_position.html
@@ -39,8 +39,8 @@
   <div class="m-2 bg-warning d-md-none d-xl-block">보이나? 안보이나?</div>
 
   <!-- position fixed -->
-  <div class="sticky fixed-top bg dark"></div>
-  <div class="sticky fixed-bottom bg dark"></div>
+  <div class="sticky fixed-top bg-dark"></div>
+  <div class="sticky fixed-bottom bg-dark"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
