--- a/03_web/02_bootstrap/07_grid.html
+++ b/03_web/02_bootstrap/07_grid.html
@@ -123,18 +123,18 @@
       1200px 이상 :6등분
      -->
     <div class="row">
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
-      <div class="row square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
+      <div class="square col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2"></div>
     </div>
   </div>
 
