--- a/03_web/03_responsive/01_flex.html
+++ b/03_web/03_responsive/01_flex.html
@@ -17,7 +17,7 @@
       display: flex;
       /* flex의 방향을 정해준다.(x축 방향인데 거꾸로) */
       /* flex-direction: row-reverse; */
-      /* flex의 방향을 정해준다.(y축 방향) */
+      /* flex의 방향을 정W해준다.(y축 방향) */
       /* flex-direction: column; */
       /* flex의 방향을 정해준다.(y축 방향인데 거꾸로) */
       /* flex-direction: column-reverse; */
