--- a/06_js/01_js_callback/02_event_listener.html
+++ b/06_js/01_js_callback/02_event_listener.html
@@ -21,6 +21,9 @@
       const area = document.querySelector('#my')
       area.innerHTML = '<h1>뿅!!!</h1>'
     })
+    button.addEventListener('keypress', function(event) {
+      console.log('keypress')
+    })
   </script>
 </body>
 </html>
