201023 | finish footer at lorem project

--- a/03_web/05_sass/02_lorem_project/index.html
+++ b/03_web/05_sass/02_lorem_project/index.html
@@ -24,7 +24,11 @@
   </main>
 
   <footer>
-    FOOTER
+    <div id="logo-text-footer">Lorem</div>
+    <div id="copyright">
+      <p>Tincidunt id aliquet risus feugiat in. Faucibus purus in massa tempor nec. Aliquet bibendum enim facilisis gravida. Dolor sit amet consectetur adipiscing. Odio pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Dolor sit amet</p>
+      <p>Copyright &copy; 2020 Lorem. All Rights Reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
