201023 | markup main section at lorem project

--- a/03_web/05_sass/02_lorem_project/index.html
+++ b/03_web/05_sass/02_lorem_project/index.html
@@ -20,7 +20,52 @@
   </header>
 
   <main>
-    MAIN
+    <section id="section-about">
+      <h2>Tellus orci ac auctor augue mauris augue neque</h2>
+      <div id="section-about-words">
+        <h3>commodo sed egestas egestas fringilla</h3>
+        <p>Non blandit massa enim nec dui nunc mattis enim ut. Vulputate odio ut enim blandit volutpat maecenas volutpat
+          blandit. Adipiscing vitae proin sagittis nisl rhoncus mattis. Consectetur adipiscing elit pellentesque
+          habitant. Ut tellus elementum sagittis vitae et leo duis. Dolor sit amet consectetur adipiscing. Porttitor
+          lacus luctus accumsan tortor posuere ac. Montes nascetur ridiculus mus mauris vitae ultricies leo integer.</p>
+          <a href="#" class="btn-text">Read More</a>
+          <a href="#" class="btn-text">Read More</a>
+      </div>
+      <div id="section-about-photo">
+        <div class="photo"><img src="images/photo-1.jpg" alt="photo 1"></div>
+        <div class="photo"><img src="images/photo-2.jpg" alt="photo 2"></div>
+      </div>
+    </section>
+
+    <section id="section-etc">
+      <div id="etc-1">
+        <div class="etc-icon">
+          <i class="material-icons">loyalty</i>
+        </div>
+        <div class="etc-text">
+          <h3>Consequ Amar Yeti</h3>
+          <p>ac odio tempor orci dapibus ultrices in. Velit aliquet sagittis id consectetur. Vitae proin sagittis nisl rhoncus mattis volutpat</p>
+        </div>
+      </div>
+      <div id="etc-2">
+        <div class="etc-icon">
+          <i class="material-icons">extension</i>
+        </div>
+        <div class="etc-text">
+          <h3>Consequ Amar Yeti</h3>
+          <p>ac odio tempor orci dapibus ultrices in. Velit aliquet sagittis id consectetur. Vitae proin sagittis nisl rhoncus mattis volutpat</p>
+        </div>
+      </div>
+      <div id="etc-3">
+        <div class="etc-icon">
+          <i class="material-icons">av_timer</i>
+        </div>
+        <div class="etc-text">
+          <h3>Consequ Amar Yeti</h3>
+          <p>ac odio tempor orci dapibus ultrices in. Velit aliquet sagittis id consectetur. Vitae proin sagittis nisl rhoncus mattis volutpat</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
