201024 | add main section scss styling at lorem project

--- a/03_web/05_sass/02_lorem_project/index.html
+++ b/03_web/05_sass/02_lorem_project/index.html
@@ -28,7 +28,7 @@
           blandit. Adipiscing vitae proin sagittis nisl rhoncus mattis. Consectetur adipiscing elit pellentesque
           habitant. Ut tellus elementum sagittis vitae et leo duis. Dolor sit amet consectetur adipiscing. Porttitor
           lacus luctus accumsan tortor posuere ac. Montes nascetur ridiculus mus mauris vitae ultricies leo integer.</p>
-          <a href="#" class="btn-text">Read More</a>
+          <a href="#" class="btn-text u-margin-right-small">Read More</a>
           <a href="#" class="btn-text">Read More</a>
       </div>
       <div id="section-about-photo">
