--- a/03_web/05_sass/02_lorem_project/index.html
+++ b/03_web/05_sass/02_lorem_project/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section id="section-etc">
-      <div id="etc-1">
+      <div id="etc-1" class="etc">
         <div class="etc-icon">
           <i class="material-icons">loyalty</i>
         </div>
@@ -47,7 +47,7 @@
           <p>ac odio tempor orci dapibus ultrices in. Velit aliquet sagittis id consectetur. Vitae proin sagittis nisl rhoncus mattis volutpat</p>
         </div>
       </div>
-      <div id="etc-2">
+      <div id="etc-2" class="etc">
         <div class="etc-icon">
           <i class="material-icons">extension</i>
         </div>
@@ -56,7 +56,7 @@
           <p>ac odio tempor orci dapibus ultrices in. Velit aliquet sagittis id consectetur. Vitae proin sagittis nisl rhoncus mattis volutpat</p>
         </div>
       </div>
-      <div id="etc-3">
+      <div id="etc-3" class="etc">
         <div class="etc-icon">
           <i class="material-icons">av_timer</i>
         </div>
