201025 | complete nav component at lorem project

--- a/03_web/05_sass/02_lorem_project/index.html
+++ b/03_web/05_sass/02_lorem_project/index.html
@@ -7,6 +7,35 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+  <nav class="nav">
+    <input type="checkbox" id="nav-toggle" class="nav-checkbox">
+    <label for="nav-toggle" class="nav-button">
+      <span class="nav-icon">&nbsp;</span>
+    </label>
+
+    <div class="nav-bg">&nbsp;</div>
+
+    <div class="nav-body">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span>01</span>About Lorem
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span>02</span>Commades Sanos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <span>03</span>Ryusin Magnetas Aloha
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <header>
     <div id="logo-text">Lorem</div>
     <div id="header-text">
