--- a/06_js/09_functional_js/07_lazy_evaluation_2/example03.html
+++ b/06_js/09_functional_js/07_lazy_evaluation_2/example03.html
@@ -33,3 +33,95 @@
   const flatten = pipe(L.flatten, takeAll);
   log(flatten([[1, 2], 3, 4, [5, 6], [7, 8, 9]]));
 </script>
+
+<script>
+  // L.flatMap = L.map + flatten 두 동작을 한 번에 처리
+  // log([[1, 2], [3, 4], [5, 6, 7]].flatMap(a => a));
+  // log([[1, 2], [3, 4], [5, 6, 7]].flatMap(a => a.map(a => a * a)));
+  // [[1, 4], [9, 16], [25, 36, 49]] => [1, 4, 9, 16, 25, 36, 49]로 변환하는 비효율적인 로직
+  log(flatten([[1, 2], [3, 4], [5, 6, 7]].map(a => a.map(a => a * a))));
+
+  // L.flatMap(지연성 있는 flatMap / Array 뿐만 아니라 다형성이 있는 이터러블을 다룰 수 있는 flatMap)
+
+  // 평가를 끝까지 한 번더 미루는 flatten으로 끝냄
+  L.flatMap = curry(pipe(L.map, L.flatten));
+  // 똑같이 L.map을 하지만 평가를 모두 완료한 flatMap으로 만듬
+  const flatMap = curry(pipe(L.map, flatten));
+
+  // var it = L.flatMap(map(a => a * a), [[1, 2], [3, 4], [5, 6, 7]]);
+  var it = L.flatMap(a => a , [[1, 2], [3, 4], [5, 6, 7]]);
+  log([...it]);
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+  // log(it.next());
+
+  log(flatMap(a => a, [[1, 2], [3, 4], [5, 6, 7]]));
+
+  // 응용
+  var it = L.flatMap(L.range, map(a => a + 1, [1, 2, 3]));
+  log(it.next());
+  log(it.next());
+  log(it.next());
+  log(it.next());
+
+  log(take(3, L.flatMap(L.range, map(a => a + 1, [1, 2, 3]))));
+</script>
+
+<script>
+  // 2차원 배열 다루기
+  const arr = [
+    [1, 2],
+    [3, 4, 5],
+    [6, 7, 8],
+    [9, 10]
+  ];
+
+  //L.flatten이 적용되었기 때문에 5 까지만(필요한 값 까지만) 순회한 후 6 이후는 순회하지 않는다.
+  go(arr,
+    L.flatten,
+    L.filter(a => a % 2),
+    L.map(a => a * a),
+    take(4),
+    reduce(add),
+    log);
+</script>
+
+<script>
+  // 지연성 / 이터러블 중심 프로그래밍 실무적인 코드
+  var users = [
+    {
+      name: 'a', age: 21, family: [
+        {name: 'a1', age: 53}, {name: 'a2', age: 47},
+        {name: 'a3', age: 16}, {name: 'a4', age: 15}
+      ]
+    },
+    {
+      name: 'b', age: 24, family: [
+        {name: 'b1', age: 58}, {name: 'b2', age: 51},
+        {name: 'b3', age: 19}, {name: 'b4', age: 22}
+      ]
+    },
+    {
+      name: 'c', age: 31, family: [
+        {name: 'c1', age: 64}, {name: 'c2', age: 62}
+      ]
+    },
+    {
+      name: 'd', age: 20, family: [
+        {name: 'd1', age: 42}, {name: 'd2', age: 42},
+        {name: 'd3', age: 11}, {name: 'd4', age: 7}
+      ]
+    }
+  ];
+
+  go(users,
+    L.flatMap(u => u.family),
+    L.filter(u => u.age > 20),
+    L.map(u => u.age),
+    take(4),
+    reduce(add),
+    log);
+</script>
