210105 | add API function type definition

--- a/09_ts/02_captain/project/index.html
+++ b/09_ts/02_captain/project/index.html
@@ -52,6 +52,6 @@
         </div>
       </div>
     </main>
-    <script src="./app.js"></script>
+    <script src="./built/app.js"></script>
   </body>
 </html>
