210328 | add react event handling contents

--- a/08_react/04_learn-document/01_main_concept/index.html
+++ b/08_react/04_learn-document/01_main_concept/index.html
@@ -17,6 +17,8 @@
   <!-- <script type="text/babel" src="02_intro-jsx.js"></script> -->
   <!-- <script type="text/babel" src="03_element-rendering.js"></script> -->
   <!-- <script type="text/babel" src="04_components_props.js"></script> -->
-  <script type="text/babel" src="05_state-lifecycle.js"></script>
+  <!-- <script type="text/babel" src="05_state-lifecycle.js"></script> -->
+  <!-- <script type="text/babel" src="06_event_before.js"></script> -->
+  <script type="text/babel" src="06_event_after.js"></script>
 </body>
 </html>
