210328 | add react conditional rendering contents

--- a/08_react/04_learn-document/01_main_concept/index.html
+++ b/08_react/04_learn-document/01_main_concept/index.html
@@ -19,6 +19,8 @@
   <!-- <script type="text/babel" src="04_components_props.js"></script> -->
   <!-- <script type="text/babel" src="05_state-lifecycle.js"></script> -->
   <!-- <script type="text/babel" src="06_event_before.js"></script> -->
-  <script type="text/babel" src="06_event_after.js"></script>
+  <!-- <script type="text/babel" src="06_event_after.js"></script> -->
+  <!-- <script type="text/babel" src="07_conditional_rendering.js"></script> -->
+  <script type="text/babel" src="07_prevent_component_rendering.js"></script>
 </body>
 </html>
