210328 | add react list & key contents

--- a/08_react/04_learn-document/01_main_concept/index.html
+++ b/08_react/04_learn-document/01_main_concept/index.html
@@ -21,6 +21,8 @@
   <!-- <script type="text/babel" src="06_event_before.js"></script> -->
   <!-- <script type="text/babel" src="06_event_after.js"></script> -->
   <!-- <script type="text/babel" src="07_conditional_rendering.js"></script> -->
-  <script type="text/babel" src="07_prevent_component_rendering.js"></script>
+  <!-- <script type="text/babel" src="07_prevent_component_rendering.js"></script> -->
+  <!-- <script type="text/babel" src="08_list_key.js"></script> -->
+  <script type="text/babel" src="08_list_key_sibling.js"></script>
 </body>
 </html>
