210413 | update learn react document contents

--- a/08_react/04_learn-document/01_main_concept/index.html
+++ b/08_react/04_learn-document/01_main_concept/index.html
@@ -27,6 +27,10 @@
   <!-- <script type="text/babel" src="09_form_input_textarea.js"></script> -->
   <!-- <script type="text/babel" src="09_form_select.js"></script> -->
   <!-- <script type="text/babel" src="09_form_multiple_input_control.js"></script> -->
-  <script type="text/babel" src="09_form_input_null.js"></script>
+  <!-- <script type="text/babel" src="09_form_input_null.js"></script> -->
+  <!-- <script type="text/babel" src="10_lifting_state.js"></script> -->
+  <!-- <script type="text/babel" src="11_composition_inheritance.js"></script> -->
+  <!-- <script type="text/babel" src="11_composition_inheritance_class.js"></script> -->
+  <script type="text/babel" src="12_react_example.js"></script>
 </body>
 </html>
